# MPC-Server

./: README.md
MPC-Server-Daemon/: Cargo.toml  README.md  myscript.sh
MPC-Server-Daemon/src/: cli.rs  lib.rs  main.rs  serialization.rs
Zengo-X Solana TSS/: Cargo.toml  README.md
Zengo-X Solana TSS/src/: lib.rs
